ecmascript/parser/tests/test262-error-references/fail/c220924a9ace3542.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/c220924a9ace3542.js:1:15
  |
1 | class Foo { * }
  |               ^

